--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,9 @@ body {
 header {
     background-color: #001f3f; 
     color: white;
-    padding: 10px 0;
+    padding: 10px;
+    position: sticky;
+    top: 0;
 }
 
 header nav ul {
